(lang dune 2.9)
(name oxen)
(version 1.0~alpha1)
(maintainers "Dario Teixeira <dario.teixeira@nleyten.com>")
(authors "Dario Teixeira <dario.teixeira@nleyten.com>")
(source (github darioteixeira/oxen))
(license ISC)
(generate_opam_files true)
(implicit_transitive_deps false)
(formatting disabled)

(package
  (name oxen)
  (synopsis "OCaml implementation of the XCS learning classifier system")
  (depends
    (dune :build)
    (fmt (>= 0.9.0))
    (logs (>= 0.7.0))
  )
)
