(lang dune 3.3)
(name ox)
(version 1.0~alpha1)
(maintainers "Dario Teixeira <dario.teixeira@nleyten.com>")
(authors "Dario Teixeira <dario.teixeira@nleyten.com>")
(source (github darioteixeira/ox))
(license ISC)
(generate_opam_files true)
(implicit_transitive_deps false)
(formatting disabled)

(package
  (name ox)
  (synopsis "OCaml implementation of the XCS learning classifier system")
  (depends
    (alcotest :with-test)
    (dune :build)
    (fmt (>= 0.9.0))
    (logs (>= 0.7.0))
    (ocaml (>= 4.14.0))
    (ppx_deriving_yojson (>= 3.6.1))
    (result (>= 1.5))
    (yojson (>= 1.7.0))
  )
)
